# IntroML-2026

./: .gitignore  README.md  pyproject.toml
exercises/00-setup/: bonus(python_env_with_uv).md  check_setup.ipynb  git.md  noto.md  python_env.md  python_env_with_uv.md
exercises/01-python/: intro_to_python.ipynb
exercises/02-numpy/: numpy_basics.ipynb
exercises/03-knn/: kNN.ipynb
exercises/04-linear-regression/: linear_regression.ipynb  linear_regression_Sol.ipynb
exercises/05-pandas/: intro_to_pandas.ipynb  intro_to_pandas_timeseries.ipynb
exercises/05.5-BONUS-Convolutions-and-Backpropagation/: README.md
exercises/06-neural-nets/: neural_nets_pytorch.ipynb
exercises/07-convnets/: convnets.ipynb
exercises/08-svm-trees/: README.md
graded_homework/: 378806_logistic_regression.ipynb  README.md  logistic_regression.ipynb
